--- a/JogoDaVelha/index.html
+++ b/JogoDaVelha/index.html
@@ -21,10 +21,10 @@
             <button data-i="7"></button>
             <button data-i="8"></button>
             <button data-i="9"></button>
-            <h2 class="currenty-player"></h2>
         </div>
+        <h2 class="currentPlayer"></h2>
     </main>
 
-    <script src="JavaScript.js" ></script>
+    <script src="abc.js" ></script>
 </body>
 </html>
